--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "description": "A sweet crud generator for laravel with vue/vuex frontend",
     "type": "library",
     "require": {
-        "php": ">=7.1.3"
+        "php": ">=7.1.3",
+        "illuminate/routing": "5.6.*",
+        "illuminate/support" : "5.6.*",
+        "illuminate/console": "5.6.*",
+        "illuminate/config": "5.6.*",
+        "illuminate/filesystem": "5.6.*"
     },
     "license": "mit",
     "authors": [
@@ -17,5 +22,11 @@
         "psr-4": {
             "SoftDreams\\LaravelVuexCrud\\": "src/"
         }
-    }
-}
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "SoftDreams\\LaravelVuexCrud\\LaravelVuexCrudProvider"
+            ]
+        }
+    }}
